--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "./index.js",
-  "scripts": {
-    "start": "parcel index.html"
+ "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel index.html"
   },
   "keywords": [],
   "author": "",
